WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114323
TileController doesn't remove tiles when the view is resized, leading to stale content
https://bugs.webkit.org/show_bug.cgi?id=114323
Summary
TileController doesn't remove tiles when the view is resized, leading to stal...
Tim Horton
Reported
2013-04-09 17:12:53 PDT
You can see this when browsing around Amazon with Aggressive Tile Retention on: 1. Go to
http://www.amazon.com/Best-Sellers-Video-Games-PlayStation-Hardware/zgbs/videogames/14210751/
2. Scroll to the bottom. 3. Click on the next page of results. 4. Scroll to the bottom. 5. Move the mouse around. You'll probably see stale content start repainting. <
rdar://problem/13520671
>
Attachments
patch
(3.83 KB, patch)
2013-04-09 18:02 PDT
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2013-04-09 18:02:14 PDT
Created
attachment 197194
[details]
patch
Simon Fraser (smfr)
Comment 2
2013-04-09 18:09:18 PDT
Comment on
attachment 197194
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=197194&action=review
> Source/WebCore/platform/graphics/ca/mac/TileController.mm:736 > + if (it->key.y() < topLeftForBounds.y() > + || it->key.y() > bottomRightForBounds.y() > + || it->key.x() < topLeftForBounds.x() > + || it->key.x() > bottomRightForBounds.x())
Would be cleaner if you copied it->key into a TileIndex variable.
Tim Horton
Comment 3
2013-04-10 09:31:41 PDT
http://trac.webkit.org/changeset/148102
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug