TileController doesn't remove tiles when the view is resized, leading to stale content https://bugs.webkit.org/show_bug.cgi?id=114323 <rdar://problem/13520671>

Reviewed by Simon Fraser.

Ensure that tiles are removed if the view shrinks, so that they are not displayed
with stale content if the view later grows again (they will not be repainted by WebCore
while out-of-view).

* platform/graphics/ca/mac/TileController.h:
* platform/graphics/ca/mac/TileController.mm:
(WebCore::TileController::revalidateTiles):


Canonical link: https://commits.webkit.org/132723@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148102 268f45cc-cd09-0410-ab3c-d52691b4dbfc